# octopus-agile-energy

./: .gitignore  GEMINI.md  README.md  com.nedrichards.octopusagile.Devel.json  com.nedrichards.octopusagile.dev.json  com.nedrichards.octopusagile.json  meson.build  pyproject.toml
.github/workflows/: flatpak.yml
data/: com.nedrichards.octopusagile.desktop.in  com.nedrichards.octopusagile.gschema.xml  com.nedrichards.octopusagile.metainfo.xml.in  com.nedrichards.octopusagile.service.in  meson.build
data/icons/: icon-script.sh  meson.build
po/: POTFILES.in  meson.build
src/: historical_costs.py  main.py  meson.build  octopus_api.py  octopusagile.gresource.xml  octopusagile.in  price_logic.py  secrets_manager.py  usage_history.py  usage_insights.py  utils.py
src/gtk/: help-overlay.ui
src/ui/: adaptive_layout.py  custom_spin_button.py  main_window.py  preferences_window.py  price_chart.py  setup_window.py  styles.py
tests/: meson.build  test_adaptive_layout.py  test_historical_costs.py  test_price_logic.py  test_usage_history.py  test_usage_insights.py
